package dataControllerUtils.protobuf;

message ADEHeader {
    extensions 5 to 105;

    enum METHOD
    {
        DOMAIN_QUERY           = 0;
        TIMEBASED_QUERY        = 1;
        TIMEBASED_SUBSCRIPTION = 2;
        SESSION                = 3;
        SESSION_TIME           = 4;
        LOG                    = 5;
        FMD_GET                = 6;
        FMD_CREATE             = 7;
        FMD_CREATE_DOCUMENT    = 8;
        SESSION_MASTER         = 9;
        DC_STATUS              = 10;
        TIMEOUT                = 11;
        SESSION_UPDATE         = 12;
        ALARM_ACK              = 13;
        ALARM_ACK_DATA         = 14;
        SDB_QUERY              = 15;
    }
    required METHOD method = 1;
    required string requestId = 2;
    optional bool   isLast = 3[default = true];
    optional bool   isError = 4[default = false];
}
